some fix to Integer Instantiation (test alredy exist and are fine)